# llm-sandbox

./: README.md
document-extraction-as-structured-format/: Makefile  README.md  app.py  pyproject.toml
document-summarizer/: Makefile  README.md  app.py  pyproject.toml
word-learner/: Makefile  README.md  client.py  pyproject.toml  server.py
word-learner/models/: word_information.py
