[tool.poetry]
name = "word-learner"
version = "0.1.0"
description = ""
authors = ["Takayuki Watanabe <takanabe.w@gmail.com>"]
readme = "README.md"
packages = [{include = "word_learner"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
requests = "^2.30.0"
openai = "^0.27.6"
langchain = "^0.0.167"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
